Fix T62958: Improve exponential easing formula

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4596